@@ -5,21 +5,15 @@
 #include "PSQt/QGUtils.h"
 #include "AppUtils/AppDataPath.h"
 
-//#include <string>
-//#include <fstream>   // ofstream
-//#include <iomanip>   // for setw, setfill
-//#include <math.h>
-//#include <stdio.h>
-
 #include <sstream>   // for stringstream
 #include <iostream>    // cout
 #include <fstream>    // ifstream(fname), ofstream
+
 //using namespace std; // for cout without std::
 
 namespace PSQt {
 
 //--------------------------
-
 
 GUIMain::GUIMain( QWidget *parent
                 , const LEVEL& level
@@ -28,7 +22,7 @@ GUIMain::GUIMain( QWidget *parent
    ): Frame(parent)
 //  : QWidget(parent)
 {
-  MsgInLog(_name_(), INFO, "Create the main control window for this app."); 
+  MsgInLog(_name_(), INFO, "Create main control window"); 
 
   const std::string base_dir = "/reg/g/psdm/detector/alignment/cspad/calib-cxi-ds1-2014-05-15/";
   const std::string fname_geo = (gfname.empty()) ? (base_dir + "calib/CsPad::CalibV1/CxiDs1.0:Cspad.0/geometry/2-end.data") : gfname; 
@@ -37,24 +31,23 @@ GUIMain::GUIMain( QWidget *parent
   //const std::string base_dir = "/reg/g/psdm/detector/alignment/cspad/calib-cxi-ds2-2015-01-20/";
   //const std::string fname_geo = base_dir + "calib/CsPad::CalibV1/CxiDs2.0:Cspad.0/geometry/0-end.data"; 
   //const std::string fname_nda = base_dir + "cspad-ndarr-max-cxig0715-r0023-lysozyme-rings.txt"; 
+
   const bool pbits = 0;
 
-  AppUtils::AppDataPath adp_icon_image("PSQt/icons/icon-monitor.png");
-  AppUtils::AppDataPath adp_icon_exit("PSQt/icons/exit.png");
-  AppUtils::AppDataPath adp_icon_save("PSQt/icons/save.png");
+  m_guilogger = new PSQt::GUILogger(this, false, false); // true/false - show/do not show buttons, frame
+  SetMsgLevel(level); // set level and update guilogger window for privious messages
 
-  m_but_image = new QPushButton( "Image", this );
-  m_but_save = new QPushButton( "Save", this );
-
-  m_but_image -> setIcon(QIcon(QString(adp_icon_image.path().c_str())));
-  m_but_save  -> setIcon(QIcon(QString(adp_icon_save.path().c_str()))); 
-
-  m_file_geo = new PSQt::WdgFile(this, "Set geometry", fname_geo, "*.data \n *", false);
-  m_file_nda = new PSQt::WdgFile(this, "Set ndarray",  fname_nda, "*.txt *.dat \n *", false);
-
-  m_wgt = new PSQt::WdgGeoTree(this, fname_geo, pbits);
-  m_wge = new PSQt::WdgGeo(this);
+  m_file_geo  = new PSQt::WdgFile(this, "Set geometry", fname_geo, "*.data \n *", false);
+  m_file_nda  = new PSQt::WdgFile(this, "Set ndarray",  fname_nda, "*.txt *.dat \n *", false);
+  m_wgt       = new PSQt::WdgGeoTree(this, fname_geo, pbits);
+  m_wge       = new PSQt::WdgGeo(this);
+  m_geoimg    = new PSQt::GeoImage(m_wgt->geoacc(), fname_nda);  
+  m_guiimv    = new PSQt::GUIImageViewer(0);
+  m_wimage    = m_guiimv->wdgImage();
  
+  m_but_image = new QPushButton("Image", this);
+  m_but_save  = new QPushButton("Save", this);
+
   m_bbox = new QHBoxLayout();
   m_bbox -> addWidget(m_but_save);
   m_bbox -> addStretch(1);
@@ -85,9 +78,6 @@ GUIMain::GUIMain( QWidget *parent
   m_wmbox -> setLayout(m_mbox);
   m_wmbox -> setContentsMargins(-9,-9,-9,-9);
 
-  m_guilogger = new PSQt::GUILogger(this, false); // true/false - show/do not show buttons
-  m_guilogger -> setContentsMargins(-9,-9,-9,-9);
-
   m_vsplit = new QSplitter(Qt::Vertical); 
   m_vsplit -> addWidget(m_wmbox); 
   m_vsplit -> addWidget(m_guilogger); 
@@ -100,38 +90,33 @@ GUIMain::GUIMain( QWidget *parent
   showTips();
   setStyle();
 
-  m_geoimg = new PSQt::GeoImage(m_wgt->geoacc(), fname_nda);  
-
-  m_guiimv = new PSQt::GUIImageViewer(0);
-  m_guiimv -> move(this->pos().x() + this->size().width() + 8, this->pos().y());  
-  m_guiimv -> show();
-  m_wimage = m_guiimv->wdgImage();
-
-  //  m_wimage = new PSQt::WdgImage(0);  
-  //  m_wimage -> move(this->pos().x() + this->size().width() + 8, this->pos().y());  
-  //  m_wimage -> show();
-
-  connect(Logger::getLogger(), SIGNAL(signal_new_record(Record&)), m_guilogger, SLOT(addNewRecord(Record&)));
-  connect(m_wgt->get_view(), SIGNAL(selectedGO(shpGO&)), m_wge, SLOT(setNewGO(shpGO&)));
   connect(m_but_image, SIGNAL(clicked()), this, SLOT(onButImage()));
   connect(m_but_save,  SIGNAL(clicked()), this, SLOT(onButSave()));
-  connect(m_file_geo,  SIGNAL(fileNameIsChanged(const std::string&)), m_wgt->get_view(), SLOT(updateTreeModel(const std::string&))); 
 
-  // connect signals for image update
+  connect(m_wgt->get_view(), SIGNAL(selectedGO(shpGO&)),
+          m_wge,             SLOT(setNewGO(shpGO&)));
 
-  connect(m_wgt->get_view(), SIGNAL(geometryIsLoaded(PSCalib::GeometryAccess*)), m_geoimg, SLOT(onGeometryIsLoaded(PSCalib::GeometryAccess*))); 
-  connect(m_file_nda, SIGNAL(fileNameIsChanged(const std::string&)), m_geoimg, SLOT(onImageFileNameIsChanged(const std::string&))); 
-  connect(m_wge,      SIGNAL(geoIsChanged(shpGO&)), m_geoimg, SLOT(onGeoIsChanged(shpGO&)));
-  //connect(m_geoimg, SIGNAL(normImageIsUpdated(const ndarray<GeoImage::image_t,2>&)), m_wimage, SLOT(onNormImageIsUpdated(const ndarray<GeoImage::image_t,2>&)));
-  connect(m_geoimg, SIGNAL(imageIsUpdated(const ndarray<const GeoImage::raw_image_t,2>&)), m_wimage, SLOT(onImageIsUpdated(const ndarray<const GeoImage::raw_image_t,2>&)));
+  connect(m_file_geo,        SIGNAL(fileNameIsChanged(const std::string&)), 
+          m_wgt->get_view(), SLOT(updateTreeModel(const std::string&))); 
 
-  connect(m_geoimg, SIGNAL(imageIsUpdated(const ndarray<const GeoImage::raw_image_t,2>&)), 
-          m_guiimv->getImageProc(), SLOT(onImageIsUpdated(const ndarray<const GeoImage::raw_image_t,2>&)));
+  connect(m_wgt->get_view(), SIGNAL(geometryIsLoaded(PSCalib::GeometryAccess*)), 
+          m_geoimg,          SLOT(onGeometryIsLoaded(PSCalib::GeometryAccess*))); 
 
+  connect(m_file_nda, SIGNAL(fileNameIsChanged(const std::string&)), 
+          m_geoimg,   SLOT(onImageFileNameIsChanged(const std::string&))); 
+
+  connect(m_wge,      SIGNAL(geoIsChanged(shpGO&)), 
+          m_geoimg,   SLOT(onGeoIsChanged(shpGO&)));
+
+  connect(m_geoimg,   SIGNAL(imageIsUpdated(ndarray<GeoImage::raw_image_t,2>&)), 
+          m_wimage,   SLOT(onImageIsUpdated(ndarray<GeoImage::raw_image_t,2>&)));
+
+  connect(m_geoimg,                 SIGNAL(imageIsUpdated(ndarray<GeoImage::raw_image_t,2>&)), 
+          m_guiimv->getImageProc(), SLOT(onImageIsUpdated(ndarray<GeoImage::raw_image_t,2>&)));
+
+  // Complete initialization through connected signals & slots
   m_wgt -> get_geotree() -> setItemSelected();
   m_geoimg -> setFirstImage();
-
-  SetMsgLevel(level);
 }
 
 //--------------------------
@@ -139,7 +124,7 @@ GUIMain::GUIMain( QWidget *parent
 void
 GUIMain::showTips() 
 {
-  m_file_geo  -> setToolTip("Select \"geometry\" file");
+  m_file_geo  -> setToolTip("Select geometry file");
   m_file_nda  -> setToolTip("Select ndarray with image file");
   m_but_image -> setToolTip("Open/close image window");
 }
@@ -149,18 +134,23 @@ GUIMain::showTips()
 void
 GUIMain::setStyle()
 {
-  //m_file_geo->setFixedWidth(150);
-  //m_file_nda->setFixedWidth(150);
+  AppUtils::AppDataPath adp_icon_image("PSQt/icons/icon-monitor.png");
+  AppUtils::AppDataPath adp_icon_exit("PSQt/icons/exit.png");
+  AppUtils::AppDataPath adp_icon_save("PSQt/icons/save.png");
 
-  //this -> setGeometry(0, 0, 500, 525);
+  m_but_image -> setIcon(QIcon(QString(adp_icon_image.path().c_str())));
+  m_but_save  -> setIcon(QIcon(QString(adp_icon_save.path().c_str()))); 
+
   this -> setGeometry(0, 0, 700, 726);
   this -> setWindowTitle(tr("Detector alignment"));
+
+  m_guiimv -> move(this->pos().x() + this->size().width() + 8, this->pos().y());  
+  m_guiimv -> show();
+
+  //m_file_geo->setFixedWidth(150);
+  //m_file_nda->setFixedWidth(150);
   //this -> setContentsMargins(-9,-9,-9,-9);
-
   //this -> move(0,0);  
-
-  //m_guilogger -> move(this->pos().x(), this->pos().y() + this->size().height());  
-
 }
 
 //--------------------------
@@ -195,7 +185,7 @@ GUIMain::closeEvent(QCloseEvent *event)
   m_guiimv   = 0;
   m_guilogger = 0;
 
-  SaveLog("work/z-log.txt", true);
+  SaveLog("work/z-log.txt", true); // true - insert time-stamp
 }
 
 //--------------------------
@@ -209,11 +199,6 @@ GUIMain::mousePressEvent(QMouseEvent *event)
   //std::cout << text.toStdString()  << std::endl;
 }
 
-//--------------------------
-//--------------------------
-//--------------------------
-//--------------------------
-//--------------------------
 //--------------------------
 
 void 
@@ -257,7 +242,11 @@ GUIMain::onButImage()
   MsgInLog(_name_(), INFO, ss.str());
 }
 
-
+//--------------------------
+//--------------------------
+//--------------------------
+//--------------------------
+//--------------------------
 //--------------------------
 
 } // namespace PSQt
