@@ -11,6 +11,11 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2015-03-11 Mikhail S. Dubrovin
+- in GeoImage, WdgImage, ImageProc, GUIMain, GUIImageViewer signals and slots slots transfer ndarray w/o const
+- GUIMain - clean-up code
+- GUILogger - add showframe parameter
+	
 2015-03-10 Mikhail S. Dubrovin
 - Multiple changes in modules:
 M       app/geo.cpp - add input parameter parsing
